Added books feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-<h2>I shall see this on Heroku.</h2>
+<h2>Recently Added</h2>
+
+<div>
+    <% Array.from(books).forEach(book => { %>
+        <img height='150' width='100' src='<%= book.coverImagePath %>'>
+    <% }) %>
+</div>
