--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -18,8 +18,8 @@
 
 <div>
     <label>Publish Date</label>
-    <input type="date" 
-        value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    <input type="date" name="publishDate"
+            value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
 </div>
 
 <div>
