--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,5 +1,5 @@
 <h3>New Book</h3>
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST">
     <%- include('_form_fields') %> 
     <a href="/books">Cancel</a>
     <button type="submit">Create</button>
