--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -2,4 +2,4 @@
 <!-- partial form for this new author input so that it can be used by different routes later -->
 
 <label>Name</label>
-<input type="text" name="name" placeholder="Jane Doe">
+<input type="text" name="name" placeholder="Jane Doe" value="<%= author.name %>">
