--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -6,7 +6,9 @@
     <h1>Books by Author</h1>
     <div>
         <% Array.from(books).forEach(book => { %>
-            <img height='150' width='100' src='<%= book.coverImagePath %>'>
+            <a href="/books/<%= book.id %>">
+                <img height='150' width='100' src='<%= book.coverImagePath %>'>
+            </a>
         <% }) %>
     </div>
 <% } %>
