--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,6 +1,8 @@
 <h3>New Book</h3>
 <form action="/books" method="POST">
     <%- include('_form_fields') %> 
-    <a href="/books">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end">
+        <a class="form-item form-no-grow" href="/books">Cancel</a>
+        <button class="form-item form-no-grow" type="submit">Create</button>
+    </div>
 </form>
