--- a/public/stylesheets/shared/books.css
+++ b/public/stylesheets/shared/books.css
@@ -1,3 +1,15 @@
-.book-cover {
-    
+.book-covers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cover {
+    margin: 1rem;
+}
+
+.cover img {
+    object-fit: fill;
+    width: 200px;
+    height: 300px;
 }
