--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,5 +1,8 @@
 <!-- filename prefixed with '_' to indicate this is a partial file and not a rendered file -->
 <!-- partial form for this new author input so that it can be used by different routes later -->
-
-<label>Name</label>
-<input type="text" name="name" placeholder="Jane Doe" value="<%= author.name %>">
+<div class="form-row">
+    <div class="form-item">
+        <label>Name</label>
+        <input type="text" name="name" placeholder="Jane Doe" value="<%= author.name %>">
+    </div>
+</div>
