--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,14 +1,24 @@
 <h2>Search Authors</h2>
 <form action="/authors" method="GET">
-    <label>Name</label>
-    <input type="text" name="name" value="<%= searchOptions.name %>">
-    <button type="submit">Search</button>
+    <div class="form-row">
+        <div class="form-item">
+            <label>Name</label>
+            <input type="text" name="name" value="<%= searchOptions.name %>">
+        </div>      
+    </div>
+    <div class="form-row form-row-end btn-row">
+        <button class="btn btn-submit" type="submit">Search</button>
+    </div>
 </form>
 
 
 <% authors.forEach(author => { %>
-    <div><%= author.name %></div>
-    <a href='/authors/<%= author.id %>'>View</a>
-    <a href="/authors/<%= author.id %>/edit">Edit</a>
-    <%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
+    <div class="form-row">
+        <div class="form-item"><%= author.name %></div>
+        <div class="btn-row">
+            <a class="btn btn-primary" href='/authors/<%= author.id %>'>View</a>
+            <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+            <%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
+        </div>
+    </div>
 <% }) %>
