--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -2,6 +2,8 @@
 <form action="/authors" method="POST">
     <%- include('_form_fields') %> 
     <!-- anchor tag: link things vs buttons: interact with other objects -->
-    <a href="/authors">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/authors">Cancel</a>
+        <button class="btn btn-submit" type="submit">Create</button>
+    </div>
 </form>
