--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,7 +1,8 @@
 <h2><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
-
+<div class="btn-row">
+    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+    <%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
+</div>
 <% if (books.length > 0) { %>
     <h1>Books by Author</h1>
     <div>
