--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,16 +17,19 @@
         </div>
     </div>
     <div class="form-row form-row-end">
-        <div class="form-item form-no-grow btn btn-submit">
-            <button type="submit">Search</button>
+        <div class="form-item form-no-grow">
+            <button class="btn btn-submit" type="submit">Search</button>
         </div>
     </div>
 </form>
-<div>
+
+<div class="book-covers">
     <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height='150' width='100' src='<%= book.coverImagePath %>'>
-        </a>
+        <div class="cover">
+            <a href="/books/<%= book.id %>">
+                <img height='150' width='100' src='<%= book.coverImagePath %>'>
+            </a>
+        </div>
     <% }) %>
 </div>
 
