--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,8 +1,9 @@
 <h3>New Book</h3>
 <form action="/books" method="POST">
     <%- include('_form_fields') %> 
-    <div class="form-row form-row-end">
-        <a class="form-item form-no-grow" href="/books">Cancel</a>
-        <button class="form-item form-no-grow" type="submit">Create</button>
+    <div class="form-row-end btn-row">
+        <a class="btn btn-danger" href="/books">Cancel</a>
+        <button class="btn btn-submit" 
+        type="submit">Create</button>
     </div>
 </form>
