--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,11 +1,15 @@
 <h2><%= book.title %></h2>
-<a href="/books/<%= book.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm.ejs', { url: `/books/${book.id}` }) %>
-<a href="/authors/<%= book.author.id %>">View Author</a>
 
-<div>
-    <img height='150' width='100' src='<%= book.coverImagePath %>'>
+<div class="btn-row">
+    <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Edit</a>
+    <%- include('../partials/deleteForm.ejs', { url: `/books/${book.id}` }) %>
+    <a class="btn btn-primary" href="/authors/<%= book.author.id %>">View Author</a>
 </div>
+
+<div class="cover">
+    <img src='<%= book.coverImagePath %>'>
+</div>
+
 <div>Author: <%= book.author.name %></div>
 <div>Published Date: <%= book.publishDate.toDateString() %></div>
 <div>Page Count: <%= book.pageCount %></div>
