--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
 <h2 class="page-header">Recently Added</h2>
 
-<div>
+<div class="book-covers">
     <% Array.from(books).forEach(book => { %>
+        <div class="cover">
         <a href="/books/<%= book.id %>">
-            <img height='150' width='100' src='<%= book.coverImagePath %>'>
+            <img src='<%= book.coverImagePath %>'>
         </a>
+        </div>
     <% }) %>
 </div>
