--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,3 +1,5 @@
 <form method="POST" action="<%= url %>?_method=DELETE">
-    <button type="submit">Delete</button>
+    <button class="btn btn-danger" type="submit">Delete</button>
 </form>
+
+<!-- default form css overlapping with custon btn css -->
