--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,4 +1,4 @@
-<h3>Edit Author</h3>
+<h2 class="page-header">Edit Author</h2>
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %> 
     <!-- anchor tag: link things vs buttons: interact with other objects -->
