--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,4 +1,4 @@
-<h3>New Author</h3>
+<h2 class="page-header">New Author</h2>
 <form action="/authors" method="POST">
     <%- include('_form_fields') %> 
     <!-- anchor tag: link things vs buttons: interact with other objects -->
