--- a/public/stylesheets/shared/buttons.css
+++ b/public/stylesheets/shared/buttons.css
@@ -27,6 +27,14 @@ button {
     margin-left: 0;
 }
 
+.btn-row-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    justify-content:center;
+    margin: 0.5rem;
+    column-gap: 0.5rem;
+}
+
 .btn-primary {
     background-color: lightgrey;
 }
