--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,10 +1,10 @@
-<h2><%= author.name %></h2>
+<h2 class="page-header"><%= author.name %></h2>
 <div class="btn-row">
     <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
     <%- include('../partials/deleteForm.ejs', { url: `/authors/${author.id}` }) %>
 </div>
 <% if (books.length > 0) { %>
-    <h1>Books by Author</h1>
+    <h3>Books by Author</h3>
     <div>
         <% Array.from(books).forEach(book => { %>
             <a href="/books/<%= book.id %>">
