--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -31,8 +31,8 @@
     </div>
 </div>
 
-<div class="form-row">
-    <div class="form-item form-no-grow">
+<div class="form-row-grid">
+    <div class="form-item">
         <label>Cover</label>
         <input type="file" name="cover" class="filepond">
     </div>
