--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,4 +1,4 @@
-<h3>Edit Book</h3>
+<h2 class="page-header">Edit Book</h2>
 <form action="/books/<%= book.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %> 
     <!-- anchor tag: link things vs buttons: interact with other objects -->
