--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,4 @@
-<h3>New Book</h3>
+<h2 class="page-header">New Book</h2>
 <form action="/books" method="POST">
     <%- include('_form_fields') %> 
     <div class="form-row-end btn-row">
