--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,16 +1,32 @@
-<h2><%= book.title %></h2>
+<h2 class="page-header"><%= book.title %></h2>
+<div class="book-show">
+    <div class="cover">
+        <img src='<%= book.coverImagePath %>'>
+        <div class="btn-row-grid">
+            <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Edit</a>
+            <%- include('../partials/deleteForm.ejs', { url: `/books/${book.id}` }) %>
+        </div>
+        <div class="btn-row-grid">
+            <a class="btn btn-primary" href="/authors/<%= book.author.id %>">View Author</a>
+        </div>
+    </div>
 
-<div class="btn-row">
-    <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Edit</a>
-    <%- include('../partials/deleteForm.ejs', { url: `/books/${book.id}` }) %>
-    <a class="btn btn-primary" href="/authors/<%= book.author.id %>">View Author</a>
+    <div class="book-metadata">
+        <div class="detail">
+            <div class="label">Author: </div>
+            <div class="value"><%= book.author.name %></div>
+        </div>
+        <div class="detail">
+            <div class="label">Published Date: </div>
+            <div class="value"><%= book.publishDate.toDateString() %></div>
+        </div>
+        <div class="detail">
+            <div class="label">Page Count: </div>
+            <div class="value"><%= book.pageCount %></div>
+        </div>
+        <div class="detail">
+            <div class="label"> Description: </div>
+            <div class="value"><%= book.description %></div>
+        </div>
+    </div>
 </div>
-
-<div class="cover">
-    <img src='<%= book.coverImagePath %>'>
-</div>
-
-<div>Author: <%= book.author.name %></div>
-<div>Published Date: <%= book.publishDate.toDateString() %></div>
-<div>Page Count: <%= book.pageCount %></div>
-<div>Description: <%= book.description %></div>
